--- a/SEC_Data_Analysis.ipynb
+++ b/SEC_Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "id": "abc2e01a",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
        "4         1.982980e+11                           8.903500e+10  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "id": "6fa8dd9c",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "id": "23eef36f",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "id": "f90a9c36",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "id": "5aca5089",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 38,
    "id": "7e744bb7",
    "metadata": {},
    "outputs": [
@@ -440,25 +440,25 @@
        "0                                -9.970117  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df = df.sort_values(by=['Company', 'Year'])\n",
     "df['Revenue Growth (%)'] = df.groupby(['Company'])['Total Revenue'].pct_change() * 100\n",
     "df['Net Income Growth (%)'] = df.groupby(['Company'])['Net Income'].pct_change() * 100\n",
     "df['Total Assets (%)'] = df.groupby(['Company'])['Total Assets'].pct_change() * 100\n",
     "df['Total Liabilities (%)'] = df.groupby(['Company'])['Total Liabilities'].pct_change() * 100\n",
     "df['Cash Flow from Operating Activities (%)'] = df.groupby(['Company'])['Cash Flow from Operating Activities'].pct_change() * 100\n",
     "\n",
-    "df = df.sort_values(by = ['Company', \"Year\"])\n",
     "df[:9]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 39,
    "id": "251f952c",
    "metadata": {},
    "outputs": [
@@ -683,7 +683,7 @@
        "0                                    -9.97  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,11 +698,351 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "1e887f95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Total Revenue</th>\n",
+       "      <th>Net Income</th>\n",
+       "      <th>Total Assets</th>\n",
+       "      <th>Total Liabilities</th>\n",
+       "      <th>Cash Flow from Operating Activities</th>\n",
+       "      <th>Revenue Growth (%)</th>\n",
+       "      <th>Net Income Growth (%)</th>\n",
+       "      <th>Total Assets (%)</th>\n",
+       "      <th>Total Liabilities (%)</th>\n",
+       "      <th>Cash Flow from Operating Activities (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>3.658170e+11</td>\n",
+       "      <td>9.468000e+10</td>\n",
+       "      <td>3.510020e+11</td>\n",
+       "      <td>2.879120e+11</td>\n",
+       "      <td>1.040380e+11</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>3.943280e+11</td>\n",
+       "      <td>9.980300e+10</td>\n",
+       "      <td>3.527550e+11</td>\n",
+       "      <td>3.020830e+11</td>\n",
+       "      <td>1.221510e+11</td>\n",
+       "      <td>7.79</td>\n",
+       "      <td>5.41</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>4.92</td>\n",
+       "      <td>17.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>3.832850e+11</td>\n",
+       "      <td>9.699500e+10</td>\n",
+       "      <td>3.525830e+11</td>\n",
+       "      <td>2.904370e+11</td>\n",
+       "      <td>1.105430e+11</td>\n",
+       "      <td>-2.80</td>\n",
+       "      <td>-2.81</td>\n",
+       "      <td>-0.05</td>\n",
+       "      <td>-3.86</td>\n",
+       "      <td>-9.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>Microsoft</td>\n",
+       "      <td>1.680880e+11</td>\n",
+       "      <td>6.127100e+10</td>\n",
+       "      <td>3.337790e+11</td>\n",
+       "      <td>1.917910e+11</td>\n",
+       "      <td>7.674000e+10</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>Microsoft</td>\n",
+       "      <td>1.982700e+11</td>\n",
+       "      <td>7.273800e+10</td>\n",
+       "      <td>3.648400e+11</td>\n",
+       "      <td>1.982980e+11</td>\n",
+       "      <td>8.903500e+10</td>\n",
+       "      <td>17.96</td>\n",
+       "      <td>18.72</td>\n",
+       "      <td>9.31</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>16.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>Microsoft</td>\n",
+       "      <td>2.119150e+11</td>\n",
+       "      <td>7.236100e+10</td>\n",
+       "      <td>4.119760e+11</td>\n",
+       "      <td>2.057530e+11</td>\n",
+       "      <td>8.758200e+10</td>\n",
+       "      <td>6.88</td>\n",
+       "      <td>-0.52</td>\n",
+       "      <td>12.92</td>\n",
+       "      <td>3.76</td>\n",
+       "      <td>-1.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>Tesla</td>\n",
+       "      <td>5.382300e+10</td>\n",
+       "      <td>5.644000e+09</td>\n",
+       "      <td>6.213100e+10</td>\n",
+       "      <td>3.054800e+10</td>\n",
+       "      <td>1.149700e+10</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>Tesla</td>\n",
+       "      <td>8.146200e+10</td>\n",
+       "      <td>1.258700e+10</td>\n",
+       "      <td>8.233800e+10</td>\n",
+       "      <td>3.644000e+10</td>\n",
+       "      <td>1.472400e+10</td>\n",
+       "      <td>51.35</td>\n",
+       "      <td>123.02</td>\n",
+       "      <td>32.52</td>\n",
+       "      <td>19.29</td>\n",
+       "      <td>28.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>Tesla</td>\n",
+       "      <td>9.677300e+10</td>\n",
+       "      <td>1.497400e+10</td>\n",
+       "      <td>1.066180e+11</td>\n",
+       "      <td>4.300900e+10</td>\n",
+       "      <td>1.325600e+10</td>\n",
+       "      <td>18.80</td>\n",
+       "      <td>18.96</td>\n",
+       "      <td>29.49</td>\n",
+       "      <td>18.03</td>\n",
+       "      <td>-9.97</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year    Company  Total Revenue    Net Income  Total Assets  \\\n",
+       "8  2021      Apple   3.658170e+11  9.468000e+10  3.510020e+11   \n",
+       "7  2022      Apple   3.943280e+11  9.980300e+10  3.527550e+11   \n",
+       "6  2023      Apple   3.832850e+11  9.699500e+10  3.525830e+11   \n",
+       "5  2021  Microsoft   1.680880e+11  6.127100e+10  3.337790e+11   \n",
+       "4  2022  Microsoft   1.982700e+11  7.273800e+10  3.648400e+11   \n",
+       "3  2023  Microsoft   2.119150e+11  7.236100e+10  4.119760e+11   \n",
+       "2  2021      Tesla   5.382300e+10  5.644000e+09  6.213100e+10   \n",
+       "1  2022      Tesla   8.146200e+10  1.258700e+10  8.233800e+10   \n",
+       "0  2023      Tesla   9.677300e+10  1.497400e+10  1.066180e+11   \n",
+       "\n",
+       "   Total Liabilities  Cash Flow from Operating Activities  Revenue Growth (%)  \\\n",
+       "8       2.879120e+11                         1.040380e+11                0.00   \n",
+       "7       3.020830e+11                         1.221510e+11                7.79   \n",
+       "6       2.904370e+11                         1.105430e+11               -2.80   \n",
+       "5       1.917910e+11                         7.674000e+10                0.00   \n",
+       "4       1.982980e+11                         8.903500e+10               17.96   \n",
+       "3       2.057530e+11                         8.758200e+10                6.88   \n",
+       "2       3.054800e+10                         1.149700e+10                0.00   \n",
+       "1       3.644000e+10                         1.472400e+10               51.35   \n",
+       "0       4.300900e+10                         1.325600e+10               18.80   \n",
+       "\n",
+       "   Net Income Growth (%)  Total Assets (%)  Total Liabilities (%)  \\\n",
+       "8                   0.00              0.00                   0.00   \n",
+       "7                   5.41              0.50                   4.92   \n",
+       "6                  -2.81             -0.05                  -3.86   \n",
+       "5                   0.00              0.00                   0.00   \n",
+       "4                  18.72              9.31                   3.39   \n",
+       "3                  -0.52             12.92                   3.76   \n",
+       "2                   0.00              0.00                   0.00   \n",
+       "1                 123.02             32.52                  19.29   \n",
+       "0                  18.96             29.49                  18.03   \n",
+       "\n",
+       "   Cash Flow from Operating Activities (%)  \n",
+       "8                                     0.00  \n",
+       "7                                    17.41  \n",
+       "6                                    -9.50  \n",
+       "5                                     0.00  \n",
+       "4                                    16.02  \n",
+       "3                                    -1.63  \n",
+       "2                                     0.00  \n",
+       "1                                    28.07  \n",
+       "0                                    -9.97  "
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.fillna(0, inplace = True)\n",
+    "df[:9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "1ff29e78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Revenue Growth (%)</th>\n",
+       "      <th>Net Income Growth (%)</th>\n",
+       "      <th>Total Assets (%)</th>\n",
+       "      <th>Total Liabilities (%)</th>\n",
+       "      <th>Cash Flow from Operating Activities (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Apple</td>\n",
+       "      <td>1.663333</td>\n",
+       "      <td>0.866667</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.353333</td>\n",
+       "      <td>2.636667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Microsoft</td>\n",
+       "      <td>8.280000</td>\n",
+       "      <td>6.066667</td>\n",
+       "      <td>7.41</td>\n",
+       "      <td>2.383333</td>\n",
+       "      <td>4.796667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tesla</td>\n",
+       "      <td>23.383333</td>\n",
+       "      <td>47.326667</td>\n",
+       "      <td>20.67</td>\n",
+       "      <td>12.440000</td>\n",
+       "      <td>6.033333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Company  Revenue Growth (%)  Net Income Growth (%)  Total Assets (%)  \\\n",
+       "0      Apple            1.663333               0.866667              0.15   \n",
+       "1  Microsoft            8.280000               6.066667              7.41   \n",
+       "2      Tesla           23.383333              47.326667             20.67   \n",
+       "\n",
+       "   Total Liabilities (%)  Cash Flow from Operating Activities (%)  \n",
+       "0               0.353333                                 2.636667  \n",
+       "1               2.383333                                 4.796667  \n",
+       "2              12.440000                                 6.033333  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Summary_company = df.groupby('Company').agg({\n",
+    "    'Revenue Growth (%)': 'mean',\n",
+    "    'Net Income Growth (%)' : 'mean',\n",
+    "    'Total Assets (%)' : 'mean',\n",
+    "    'Total Liabilities (%)': 'mean',\n",
+    "    'Cash Flow from Operating Activities (%)': 'mean'\n",
+    "}).reset_index()\n",
+    "\n",
+    "Summary_company.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0bf1f7bb",
    "metadata": {},
    "source": [
     "Summary:\n",
+    "\n",
+    "We were manually extracted three years of financial data from the SEC for three companies: Apple, Microsoft, and Tesla. The data included total revenues, net income, total assets, total liabilities, and cash flow from operating activities. With this data, we performed basic data cleaning and analysis with python-pandas and jupyter notebook. we were able to compare and calculate the yearly changes, and the mean for these three companies.\n",
+    "\n",
+    "Apple experienced positive growth from 2021 to 2022 but had negative growth from 2022 to 2023.\n",
+    "Microsoft showed decent growth from 2021 to 2023, but from 2022 to 2023, it experienced a decline in net income growth and cash flow from operating activities. This might indicate that Microsoft used money for purchases or investments in something in 2023. \n",
+    "Tesla had significant growth from 2021 to 2023, especially in 2022, with revenue growth of about 51.4% and net income growth of around 123%.\n",
+    "\n",
     "\n"
    ]
   }
